--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,12 @@ before_install:
   - tar xf arduino-1.8.9-linux64.tar.xz
   - sudo mv arduino-1.8.9 /usr/local/share/arduino
   - sudo ln -s /usr/local/share/arduino/arduino /usr/local/bin/arduino
+install:
+  - ln -s $PWD /usr/local/share/arduino/libraries/SparkFun_Qwiic_Button_Arduino_Library
+  - arduino --install-boards arduino:samd
+  - arduino --pref "boardsmanager.additional.urls=https://raw.githubusercontent.com/sparkfun/Arduino_Boards/master/IDE_Board_Manager/package_sparkfun_index.json" --save-prefs
+  - arduino --install-boards SparkFun:samd
+  - arduino --install-boards SparkFun:apollo3
+  - arduino --install-boards SparkFun:avr
+  - arduino --pref "boardsmanager.additional.urls=https://adafruit.github.io/arduino-board-index/package_adafruit_index.json" --save-prefs
+  - arduino --pref "boardsmanager.additional.urls=http://arduino.esp8266.com/stable/package_esp8266com_index.json" --save-prefs
