--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=Iridium SBD
-version=3.0
-author=Mikal Hart and Paul Clark
+version=3.0.0
+author=Mikal Hart and Paul Clark (PaulZC)
 maintainer=Paul Clark
 sentence=This library supports satellite data transmissions from anywhere on earth using the RockBLOCK family of Iridium 9602 and 9603 modems.
 paragraph=It works on other Iridium devices too including the Qwiic Iridium 9603N (I2C). Messages are "twitter length" and can be sent to and from the device using email, HTTP POST, or the Rock7 console. Great for tracking balloons, vehicles, and ocean floaters.
 category=Communication
-url=https://github.com/PaulZC/IridiumSBD
+url=https://github.com/mikalhart/IridiumSBD
 architectures=*
